--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <p class="services-header-desc"><div class="service-back">
         <h1 class="service-back-heading">Shooting Photos</h1>
         <p class="service-back-desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi.
-        </p>
+          Stay updated with our newest uploads and get a glimpse of the latest moments we’ve captured. Follow us on Instagram and Facebook to see all our recent posts and never miss a moment!
+         </p>
         <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">En savoir plus</a>
       </div>
       </p>
