--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Footer section  -->
   <footer id="footer" class="footer container">
     <div class="footer-contact">
-      <h1 class="footer-contact-heading">Contact With Me</h1>
+      <h1 class="footer-contact-heading">Contact us</h1>
       <p class="footer-contact-info">Email: <a href="mailto:choch@gmail.com">choch@gmail.com</a></p>
       <p class="footer-contact-info">Mobile: 054-7657080</p>
     </div>
