--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Hero Section  -->
   <section id="hero" class="hero container">
     <div class="hero-info">
-      <h1 class="hero-info-heading">I Design <br>Your Dream</h1>
+      <h1 class="hero-info-heading">I Capture Your Vision <br>For your Dream</h1>
       <p class="hero-info-subheading">I am a photographer</p>
       <a href="#about" class="hero-info-button">Learn More</a>
     </div>
@@ -80,8 +80,7 @@
             <div class="service-back">
                 <h1 class="service-back-heading">Album Creation</h1>
                 <p class="service-back-desc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi.
-                </p>
+                 </p>
                 
                 <!-- Carrousel des images intégré -->
                 <div class="carousel">
