--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Hero Section  -->
   <section id="hero" class="hero container">
     <div class="hero-info">
-      <h1 class="hero-info-heading">I Capture Your Vision <br>For your Dream</h1>
+      <h1 class="hero-info-heading">Turning Your Dream Into Art <br></h1>
       <p class="hero-info-subheading">I am a photographer</p>
       <a href="#about" class="hero-info-button">Learn More</a>
     </div>
