--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
     <div class="services-info">
       <div class="service">
         <div class="service-card">
-            <div class="service-front">
+              <div class="photo-icon">
+                <a href="#gallery">
+                  <img src="images/camera-icon.png" alt="Camera Icon" class="icon-image">
+                </a>
+              </div>
+              
                 <i class="fa fa-building"></i>
                 <h1 class="service-front-heading">Photobooks</h1>
                 <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">En savoir plus</a>
