--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <section id="about" class="about container">
     <div class="about-info">
       <h1 class="about-info-heading">About Me</h1>
-      <p class="about-info-desc"> My name is Chochana Gallula. <br><br>
+      <p class="about-info-desc" style="font-style: italic;">
+        My name is Chochana Gallula. <br><br>
         I am a professional photographer since 4 years .<br><br>
         I started in France , in Paris .<br><br> I moved in Israel in 2020.  </p>
-      <a href="#" type="button" class="about-info-button">Download Resume</a>
-    </div>
+     </div>
     <div class="about-img">
       <div class="about-img-wrapper">
         <img src="./images/img-2.jpg" alt="canon 5d">
