--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1 class="about-info-heading">About Me</h1>
       <p class="about-info-desc" style="font-style: italic;">
         My name is Chochana Gallula. <br><br>
-        I am a professional photographer since 4 years .<br><br>
+        I am a professional photographer .<br><br>
         I started in France , in Paris .<br><br> I moved in Israel in 2020.  </p>
      </div>
     <div class="about-img">
