--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="hero-info">
       <h1 class="hero-info-heading">Turning Your Dream Into Art <br></h1>
       <p class="hero-info-subheading">I am a photographer</p>
-      <a href="#about" class="hero-info-button">Learn More</a>
+      <a href="#about" class="hero-info-button">Learn More ..</a>
     </div>
     <div class="hero-img">
       <img src="./images/img-1.jpg" alt="Photography example">
@@ -66,7 +66,7 @@
         <p class="service-back-desc">
           Stay updated with our newest uploads and get a glimpse of the latest moments we’ve captured. Follow us on Instagram and Facebook to see all our recent posts and never miss a moment!
          </p>
-        <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">En savoir plus</a>
+        <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">Learn more .. </a>
       </div>
       </p>
     </div>
@@ -79,7 +79,7 @@
               </div>
             
                  <h1 class="service-front-heading"></h1>
-                <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">En savoir plus</a>
+                <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">Learn more..</a>
                </div>
             <div class="service-back">
                 <h1 class="service-back-heading">Album Creation</h1>
@@ -122,7 +122,7 @@
             <h1 class="service-back-heading">Shooting Photos</h1>
             <p class="service-back-desc">
              </p>
-            <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">En savoir plus</a>
+            <a href="https://mg-photo-git-dgallula-project1-johnbr-0b5629-dgallulas-projects.vercel.app/" class="service-link">Learn more..</a>
           </div>
           
           </div>
